# ssdlite_mobilenet_v3

./: .gitignore  anno_change.py  coco_eval.py  coco_utils.py  detection.py  engine.py  list_file.py  prepare_dataset.sh  presets.py  pyproject.toml  resize_test.ipynb  sound2coco.py  train.sh  train_val_split.py  transforms.py
